--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.5",
+    "@react-navigation/stack": "^6.3.15",
+    "@tensorflow-models/face-landmarks-detection": "^1.0.2",
     "expo": "~48.0.4",
     "expo-status-bar": "~1.4.4",
+    "install": "^0.13.0",
+    "npm": "^9.5.1",
     "react": "18.2.0",
-    "react-native": "0.71.3"
+    "react-native": "0.71.3",
+    "react-native-beautiful-video-recorder": "^2.0.1",
+    "react-native-camera": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
