--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-beautiful-video-recorder": "^2.0.1",
-    "react-native-camera": "^4.2.1"
+    "react-native-camera": "^4.2.1",
+    "expo-camera": "~13.2.1",
+    "expo-permissions": "~14.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
